Fix spacing issue in glossary style

--- a/src/scss/_singular.scss
+++ b/src/scss/_singular.scss
@@ -20,8 +20,6 @@
   }
 
   &__entry {
-    display: grid;
-    gap: .25rem;
     font-size: var(--fs-dxs);
     line-height: 1.3;
 
@@ -30,6 +28,7 @@
       justify-content: space-between;
       gap: 1rem;
       font-family: var(--ff-heading);
+      margin-bottom: .25rem;
     }
 
     &-name {
